--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,6 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./proxy/conf.d:/etc/nginx/conf.d
-      - ./proxy/vhost.d:/etc/nginx/vhost.d
-      - ./proxy/html:/usr/share/nginx/html
-      - ./proxy/certs:/etc/nginx/certs:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
     networks:
       - proxy-tier
@@ -33,7 +29,6 @@ services:
       - proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./proxy/certs:/etc/nginx/certs:rw
     restart: always
 
   web:
@@ -46,11 +41,11 @@ services:
     volumes_from:
       - app
     environment:
-      - VIRTUAL_HOST={DOMAIN}
+      - VIRTUAL_HOST=uu.lc
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST={DOMAIN}
-      - LETSENCRYPT_EMAIL={DOMAIN@EMAIL}
+      - LETSENCRYPT_HOST=uu.lc
+      - LETSENCRYPT_EMAIL=uc@uu.lc
     networks:
       - proxy-tier
     restart: always
@@ -60,10 +55,6 @@ services:
     container_name: nextcloud_fpm
     links:
       - db
-    volumes:
-      - ./nextcloud/apps:/var/www/html/apps
-      - ./nextcloud/config:/var/www/html/config
-      - ./nextcloud/data:/var/www/html/data
     networks:
       - proxy-tier
     restart: always
@@ -74,7 +65,7 @@ services:
     volumes:
       - ./nextcloud/db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=SUPERSECRETPASSWORD
+      - MYSQL_ROOT_PASSWORD=fgd45gdgbre645fsdvgf465vyrwgh4w5
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_PASSWORD=nextcloud
